Fully workable version

--- a/game-checkpoint.ipynb
+++ b/game-checkpoint.ipynb
@@ -2,17 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ваш алгоритм угадывает число в среднем за 5 попыток\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def score_game(game_core):\n",
+    "import numpy as np\n",
+    "\n",
+    "def score_game(game_core, num_range = 100):\n",
     "    '''Запускаем игру 1000 раз, чтобы узнать, как быстро игра угадывает число'''\n",
     "    count_ls = []\n",
     "    np.random.seed(1)  # фиксируем RANDOM SEED, чтобы ваш эксперимент был воспроизводим!\n",
-    "    random_array = np.random.randint(1,101, size=(1000))\n",
+    "    random_array = np.random.randint(1,num_range+1, size=(1000))\n",
     "    for number in random_array:\n",
-    "        count_ls.append(game_core(number))\n",
+    "        count_ls.append(game_core(number, num_range))\n",
     "    score = int(np.mean(count_ls))\n",
     "    print(f\"Ваш алгоритм угадывает число в среднем за {score} попыток\")\n",
     "    return(score)\n",
@@ -32,7 +52,9 @@
     "            right = predict\n",
     "            row = [x for x in range(left, right)]\n",
     "            predict = row[len(row)//2 - 1]\n",
-    "    return(count)"
+    "    return(count)\n",
+    "\n",
+    "score_game(game_core_v3)"
    ]
   }
  ],
