Final version with added function

--- a/game-checkpoint.ipynb
+++ b/game-checkpoint.ipynb
@@ -2,23 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ваш алгоритм угадывает число в среднем за 5 попыток\n"
+      "Ваш алгоритм угадывает число в среднем за 9 попыток\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "5"
+       "9"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,26 +43,32 @@
     "    return(score)\n",
     "\n",
     "\n",
+    "def get_predict(left_b, right_b):\n",
+    "    '''Нахождение элемента в середине списка из \n",
+    "    последовательности целых чисел из указанного диапазона'''    \n",
+    "    row = [x for x in range(left_b,right_b)]\n",
+    "    \n",
+    "    return row[len(row)//2 - 1]\n",
+    "    \n",
+    "\n",
     "def game_core_v3(number, num_range = 100):\n",
     "    '''Нахождение искомого числа методом бинарного поиска\n",
     "    Функция принимает заданное число и верхнюю границу ряда\n",
     "    Возвращает количество шагов поиска'''\n",
+    "     \n",
     "    left, right = 1, num_range+1\n",
-    "    row = [x for x in range(left,right)]\n",
     "    count = 1\n",
-    "    predict = row[len(row)//2 - 1]\n",
+    "    predict = get_predict(left, right)\n",
     "    \n",
     "    while number != predict:\n",
     "        count += 1\n",
     "        \n",
     "        if number > predict: #Если искомое число во второй половине ряда\n",
     "            left = predict + 1\n",
-    "            row = [x for x in range(left, right)]\n",
-    "            predict = row[len(row)//2 - 1]\n",
+    "            predict = get_predict(left, right)\n",
     "        elif number < predict: #Если искомое число в первой половине ряда\n",
     "            right = predict\n",
-    "            row = [x for x in range(left, right)]\n",
-    "            predict = row[len(row)//2 - 1]\n",
+    "            predict = get_predict(left, right)\n",
     "    \n",
     "    return(count)\n",
     "\n",
