Added another version of search

--- a/game-checkpoint.ipynb
+++ b/game-checkpoint.ipynb
@@ -2,23 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ваш алгоритм угадывает число в среднем за 5 попыток\n"
+      "Ваш алгоритм <function game_core_v3 at 0x00000283053D11F0> угадывает число в среднем за 5 попыток\n",
+      "Ваш алгоритм <function game_core_v4 at 0x0000028304EF2790> угадывает число в среднем за 1 попыток\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "5"
+       "1"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +39,7 @@
     "        count_ls.append(game_core(number, num_range))\n",
     "    \n",
     "    score = int(np.mean(count_ls))\n",
-    "    print(f\"Ваш алгоритм угадывает число в среднем за {score} попыток\")\n",
+    "    print(f\"Ваш алгоритм {game_core} угадывает число в среднем за {score} попыток\")\n",
     "    \n",
     "    return(score)\n",
     "\n",
@@ -58,7 +59,7 @@
     "     \n",
     "    left, right = 1, num_range+1\n",
     "    count = 1\n",
-    "    predict = get_predict(left, right)\n",
+    "    predict = get_predict(left, right) #Находим число в середине ряда\n",
     "    \n",
     "    while number != predict:\n",
     "        count += 1\n",
@@ -73,7 +74,35 @@
     "    return(count)\n",
     "\n",
     "\n",
-    "score_game(game_core_v3)"
+    "def game_core_v4(number, num_range = 100):\n",
+    "    '''Нахождение искомого числа методом интерполяционного поиска\n",
+    "    Функция принимает заданное число и верхнюю границу ряда\n",
+    "    Возвращает количество шагов поиска'''\n",
+    "    row = [x for x in range(1, num_range + 1)]\n",
+    "    left, right = 0, len(row) - 1\n",
+    "    count = 1\n",
+    "    mid = int(left + (number - row[left])\n",
+    "              * (right - left) / (row[right] - row[left]))\n",
+    "    #Определяем предполагаемую позицию искомого элемента в ряду\n",
+    "    #Для последовательности натуральных чисел \n",
+    "    #позиция искомого элемента определяется однозначно\n",
+    "    \n",
+    "    while row[mid] != number:\n",
+    "        count += 1\n",
+    "        if row[mid] < number:\n",
+    "            left = mid + 1\n",
+    "        \n",
+    "        elif row[mid] > number:\n",
+    "            right = mid - 1\n",
+    "        \n",
+    "        mid = int(left + (number - row[left]) \n",
+    "                  * (right - left) / (row[right] - row[left]))\n",
+    "    \n",
+    "    return(count)\n",
+    "\n",
+    "\n",
+    "score_game(game_core_v3)\n",
+    "score_game(game_core_v4)"
    ]
   }
  ],
