--- a/game.ipynb
+++ b/game.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ваш алгоритм <function game_core_v3 at 0x00000283053D11F0> угадывает число в среднем за 5 попыток\n",
-      "Ваш алгоритм <function game_core_v4 at 0x0000028304EF2790> угадывает число в среднем за 1 попыток\n"
+      "Ваш алгоритм \"game_core_v3\" угадывает число в среднем за 5 попыток\n",
+      "Ваш алгоритм \"game_core_v4\" угадывает число в среднем за 1 попытку\n"
      ]
     },
     {
@@ -19,13 +19,22 @@
        "1"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
+    "\n",
+    "\n",
+    "def get_ending(number):\n",
+    "    '''Функция возвращает окончание в родительном падеже для числа'''\n",
+    "    if len(str(number))>1:\n",
+    "        if str(number)[-2] == '1': return('ок') \n",
+    "    if str(number)[-1]=='1': return('ку')\n",
+    "    elif str(number)[-1] in ['2','3','4']: return('ки')\n",
+    "    else: return('ок')\n",
     "\n",
     "\n",
     "def score_game(game_core, num_range = 100):\n",
@@ -39,37 +48,35 @@
     "        count_ls.append(game_core(number, num_range))\n",
     "    \n",
     "    score = int(np.mean(count_ls))\n",
-    "    print(f\"Ваш алгоритм {game_core} угадывает число в среднем за {score} попыток\")\n",
+    "    print(f\"Ваш алгоритм \\\"{game_core.__name__}\\\" угадывает число в среднем за {score} попыт{get_ending(score)}\")\n",
     "    \n",
     "    return(score)\n",
     "\n",
-    "\n",
-    "def get_predict(left_b, right_b):\n",
-    "    '''Нахождение элемента в середине списка из \n",
-    "    последовательности целых чисел из указанного диапазона'''    \n",
-    "    row = [x for x in range(left_b,right_b)]\n",
-    "    \n",
-    "    return row[len(row)//2 - 1]\n",
-    "    \n",
     "\n",
     "def game_core_v3(number, num_range = 100):\n",
     "    '''Нахождение искомого числа методом бинарного поиска\n",
     "    Функция принимает заданное число и верхнюю границу ряда\n",
     "    Возвращает количество шагов поиска'''\n",
-    "     \n",
+    "    def get_middle(left_b, right_b):\n",
+    "        '''Нахождение элемента в середине списка из \n",
+    "        последовательности целых чисел из указанного диапазона'''    \n",
+    "        row = [x for x in range(left_b,right_b)]\n",
+    "    \n",
+    "        return row[len(row)//2 - 1]\n",
+    "    \n",
     "    left, right = 1, num_range+1\n",
     "    count = 1\n",
-    "    predict = get_predict(left, right) #Находим число в середине ряда\n",
+    "    predict = get_middle(left, right) #Находим число в середине ряда\n",
     "    \n",
     "    while number != predict:\n",
     "        count += 1\n",
     "        \n",
     "        if number > predict: #Если искомое число во второй половине ряда\n",
     "            left = predict + 1\n",
-    "            predict = get_predict(left, right)\n",
+    "            predict = get_middle(left, right)\n",
     "        elif number < predict: #Если искомое число в первой половине ряда\n",
     "            right = predict\n",
-    "            predict = get_predict(left, right)\n",
+    "            predict = get_middle(left, right)\n",
     "    \n",
     "    return(count)\n",
     "\n",
@@ -78,25 +85,25 @@
     "    '''Нахождение искомого числа методом интерполяционного поиска\n",
     "    Функция принимает заданное число и верхнюю границу ряда\n",
     "    Возвращает количество шагов поиска'''\n",
+    "    def predict_position():\n",
+    "        '''Определяет предполагаемую позицию искомого элемента в ряду'''\n",
+    "        return(int(left + (number - row[left])\n",
+    "              * (right - left) / (row[right] - row[left])))\n",
+    "    \n",
     "    row = [x for x in range(1, num_range + 1)]\n",
     "    left, right = 0, len(row) - 1\n",
     "    count = 1\n",
-    "    mid = int(left + (number - row[left])\n",
-    "              * (right - left) / (row[right] - row[left]))\n",
-    "    #Определяем предполагаемую позицию искомого элемента в ряду\n",
+    "    pred_position = predict_position()\n",
     "    #Для последовательности натуральных чисел \n",
     "    #позиция искомого элемента определяется однозначно\n",
     "    \n",
-    "    while row[mid] != number:\n",
+    "    while row[pred_position] != number:\n",
     "        count += 1\n",
-    "        if row[mid] < number:\n",
-    "            left = mid + 1\n",
-    "        \n",
-    "        elif row[mid] > number:\n",
-    "            right = mid - 1\n",
-    "        \n",
-    "        mid = int(left + (number - row[left]) \n",
-    "                  * (right - left) / (row[right] - row[left]))\n",
+    "        if row[pred_position] < number:\n",
+    "            left = pred_position + 1\n",
+    "        else:\n",
+    "            right = pred_position - 1\n",
+    "        pred_position = predict_position()\n",
     "    \n",
     "    return(count)\n",
     "\n",
