Fixed some bugs

--- a/game.ipynb
+++ b/game.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "7"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,7 +30,7 @@
     "\n",
     "\n",
     "def get_ending(number):\n",
-    "    '''Функция возвращает окончание в родительном падеже для числа'''\n",
+    "    '''Функция возвращает окончание для числа попыток'''\n",
     "    if len(str(number))>1:\n",
     "        if str(number)[-2] == '1': return('ок') \n",
     "    if str(number)[-1]=='1': return('ку')\n",
@@ -61,11 +61,11 @@
     "    def get_middle(left_b, right_b):\n",
     "        '''Нахождение элемента в середине списка из \n",
     "        последовательности целых чисел из указанного диапазона'''    \n",
-    "        row = [x for x in range(left_b,right_b)]\n",
+    "        row = [x for x in range(left_b, right_b+1)]\n",
     "    \n",
     "        return row[len(row)//2 - 1]\n",
     "    \n",
-    "    left, right = 1, num_range+1\n",
+    "    left, right = 1, num_range\n",
     "    count = 1\n",
     "    predict = get_middle(left, right) #Находим число в середине ряда\n",
     "    \n",
